--- a/one7homeWar/src/main/webapp/fileUpload.html
+++ b/one7homeWar/src/main/webapp/fileUpload.html
@@ -14,8 +14,8 @@
         <b>Post JSON data and files in Same Request with AngularJS and Web API example</b>
         <br />
         <br />
-        <input type="file" upload-files multiple />        <br />        <br />
-        <input type="file" upload-files multiple />                <br />        <br />
+        <input id='profile' type="file" upload-files multiple />        <br />        <br />
+        <input id='certificate' type="file" upload-files multiple />                <br />        <br />
         <ul>
             <li ng-repeat="file in files">{{file.name}}</li>
         </ul>
